--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -50,5 +50,5 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add .
-          git commit -m "Deploy Android build"
-          git push
+          git commit -m "Deploy Android build" || echo "No changes to commit"
+          git push origin main
